[package]
name = "ecosystems-demo"
version = "1.0.0"
edition = "2021"

[lib]
name = "ecosystems_demo"
path = "src/lib.rs"

# Top 5 most downloaded Rust crates
[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
